// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayEmptyState renders with a children content 1`] = `
<div>
  <div
    class="empty-state-root empty-state-root--no-image"
  >
    <h2>
      No results found
    </h2>
    <div>
      Sorry, there are no results found
    </div>
    <div
      class="empty-state-action"
    >
      My Empty State
    </div>
  </div>
</div>
`;

exports[`ClayEmptyState renders with an image provided 1`] = `
<div>
  <div
    class="empty-state-root false"
  >
    <img
      alt="empty-state-image"
      src="https://via.placeholder.com/256"
    />
    <h2>
      No results found
    </h2>
    <div>
      Sorry, there are no results found
    </div>
  </div>
</div>
`;

exports[`ClayEmptyState renders with default values 1`] = `
<div>
  <div
    class="empty-state-root empty-state-root--no-image"
  >
    <h2>
      No results found
    </h2>
    <div>
      Sorry, there are no results found
    </div>
  </div>
</div>
`;
